--- a/style.css
+++ b/style.css
@@ -570,7 +570,7 @@
     background: url(image),linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
 
     padding-bottom: 70px;
-    back
+    
 
 }
 
@@ -600,7 +600,7 @@ margin-top: 40px;
 .fun{
 
     
-    
+    position: relative;
     width: 540px;
     height: 600px;
     border-radius: 16px;
@@ -667,6 +667,29 @@ margin-top: 40px;
     text-align: left;
 }
 
+.date {
+
+    position: absolute;
+    margin-top: ;
+    /* Background */
+    
+    width: 174.51px;
+    height: 47.93px;
+    left: 38.35px;
+    top: 314.14px;
+    border-radius: 47.93px;
+
+    background: rgb(60, 216, 232);
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding-top: 15px;
+    color: rgb(255, 255, 255);
+font-family: Quicksand;
+font-size: 15.34px;
+
+}
+
 /* .datestory{
     
 
@@ -708,6 +731,7 @@ margin-top: 40px;
     border-radius: 16px;
     width: 290px;
     height: 290px;
+    position: relative;
 
 }
 
@@ -727,6 +751,53 @@ margin-top: 40px;
     width: auto;
     height: auto;
     
+}
+
+.nov{
+    
+position: absolute;
+width: 174.51px;
+height: 38.35px;
+left: 38.35px;
+top: 157.81px;
+border-radius: 47.93px;
+
+background: rgb(149, 178, 38);
+
+color: rgb(255, 255, 255);
+font-family: Raleway;
+font-size: 15.34px;
+font-weight: 500;
+line-height: 28.76px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;
+text-align: center;
+padding-top: 5px;
+
+
+}
+
+.nov2{
+    border-radius: 47.93px;
+
+background: rgb(93, 88, 240);
+position: absolute;
+width: 174.51px;
+height: 38.35px;
+left: 38.35px;
+top: 157.81px;
+border-radius: 47.93px;
+color: rgb(255, 255, 255);
+font-family: Raleway;
+font-size: 15.34px;
+font-weight: 500;
+line-height: 28.76px;
+letter-spacing: 0%;
+text-align: left;
+text-transform: capitalize;
+text-align: center;
+padding-top: 5px;
 }
 
 .story > button {
@@ -791,16 +862,67 @@ margin-top: 80px;
         width: 200px;
         height: 290px;
         justify-content: center;
+      
     
     }
 
     .datestory1>img, .datestory2>img, .datestory3>img, .datestory4>img{
-        border-radius: 16px;
+        /* border-radius: 16px; */
         width: 190px;
         height: 190x;
         justify-content: center;
         
     }
+
+
+    .nov{
+    
+       
+
+    width: 103.91px;
+    height: 22.83px;
+    left: 22.83px;
+    top: 93.96px;
+    border-radius: 28.54px;
+
+    background: rgb(149, 178, 38);
+    margin-top: 10px;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-family: Raleway;
+    font-size: 9.13px;
+    font-weight: 500;
+    line-height: 17.12px;
+    letter-spacing: 0%;
+    text-align: left;
+    text-transform: capitalize;
+    text-align: center;
+        
+        
+        }
+
+        .nov2{
+    
+       
+
+            width: 103.91px;
+            height: 22.83px;
+            left: 22.83px;
+            top: 93.96px;
+            border-radius: 28.54px;
+
+            background: rgb(93, 88, 240);
+            margin-top: 10px;
+            text-align: center;
+            color: rgb(255, 255, 255);
+            font-family: Raleway;
+            font-size: 9.13px;
+            font-weight: 500;
+            line-height: 17.12px;
+            letter-spacing: 0%;
+            text-align: left;
+            text-transform: capitalize;
+            text-align: center;}
     
 
     
@@ -894,7 +1016,10 @@ text-align: left;
 
 
 
-
+#mark{
+    font-size: 25px;
+    margin-top: 10px;
+}
 
 
 
@@ -930,4 +1055,13 @@ text-align: left;
             padding-bottom: 40px;
             margin-bottom: 20px;
         }
+
+        #mark {
+            font-size: 10px;
+            margin-top: 20px
+        }
     }
+
+    
+
+    
